Bug 410366 - New desktops are named exactly the same
Summary: New desktops are named exactly the same
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kwinvirtualdesktops (other bugs)
Version First Reported In: 5.15.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: junior-jobs
: 442162 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-07-29 18:53 UTC by Alexander Potashev
Modified: 2022-12-14 21:24 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2019-07-29 18:53:02 UTC
SUMMARY
New desktop are named the exactly same.

STEPS TO REPRODUCE
1. Open desktops KCM
2. Click "Add"

OBSERVED RESULT
The newly added desktop is named "New Desktop". If you add 5 desktops, they will all be named the same: "New Desktop", renaming them will require some effort from the user.

EXPECTED RESULT
Name them differently by default, for example i18n("Desktop %1").arg(<desktop index + 1>).

SOFTWARE/OS VERSIONS
Operating System: Fedora 30
KDE Plasma Version: 5.15.5
KDE Frameworks Version: 5.59.0
Qt Version: 5.12.4
Kernel Version: 5.1.17-300.fc30.x86_64
OS Type: 64-bit
Processors: 8 × Intel® Core™ i7-6700HQ CPU @ 2.60GHz
Memory: 15,4 ГиБ

ADDITIONAL INFORMATION
Comment 1 Kai Uwe Broulik 2019-07-30 07:17:18 UTC
Agreed. How about you submit a patch? :)
Comment 2 Bug Janitor Service 2021-05-30 21:33:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/1053
Comment 3 Nate Graham 2022-07-10 16:05:57 UTC
*** Bug 442162 has been marked as a duplicate of this bug. ***
Comment 4 Bug Janitor Service 2022-11-30 07:28:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/3252
Comment 5 Nate Graham 2022-12-14 21:24:28 UTC
Git commit b34a5a4b4bf58302be7e50e0fa0cec21fa6743fb by Nate Graham, on behalf of Thenujan Sandramohan.
Committed on 14/12/2022 at 21:24.
Pushed by ngraham into branch 'master'.

kcmkwin/kwindesktop: Make new virtual desktops have numbered names
FIXED-IN: 5.27

M  +14   -2    src/kcmkwin/kwindesktop/desktopsmodel.cpp
M  +2    -1    src/kcmkwin/kwindesktop/desktopsmodel.h
M  +1    -1    src/kcmkwin/kwindesktop/package/contents/ui/main.qml

https://invent.kde.org/plasma/kwin/commit/b34a5a4b4bf58302be7e50e0fa0cec21fa6743fb