kcmkwin/kwindesktop: Make new virtual desktops have numbered names

BUG: 410366
FIXED-IN: 5.27